--- a/src/components/Header/Cart/styles/cart.sass
+++ b/src/components/Header/Cart/styles/cart.sass
@@ -25,3 +25,29 @@
         background-color: $notification
         border-radius: 50px
         margin-left: clamp(2px,0.93456vw,8px)
+
+@media (min-width: 768px) and (max-width: 1024px)
+
+    .cart-container
+
+        .bag-icon
+            font-size: $font20tab
+            color: $white
+
+        .cart-quantity
+            width: clamp(9px,2.34375vw,36px)
+            height: clamp(9px,2.34375vw,36px)
+            display: flex
+            align-items: center
+            justify-content: center
+            color: $white
+            text-align: right
+            font-feature-settings: 'clig' off, 'liga' off
+            font-family: Lato
+            font-size: $font12tab
+            font-style: normal
+            font-weight: 400
+            line-height: 142.857%
+            background-color: $notification
+            border-radius: 50px
+            margin-left: $m8tab
