--- a/src/components/ProductsList/styles/products_list.sass
+++ b/src/components/ProductsList/styles/products_list.sass
@@ -18,3 +18,24 @@
         .swiper-wrapper
             display: flex
             flex-direction: row
+
+@media (min-width: 768px) and (max-width: 1024px)
+
+    .products-list
+        margin-top: $m64tab !important
+
+        .heading-container
+
+        .product-swiper
+            display: none
+
+        .tablet-container
+            width: 100%
+            display: flex
+            flex-direction: column
+
+            .row-upper
+                width: 100%
+                display: flex
+                flex-direction: row !important
+                align-items: center
