--- a/src/components/Spotlight/styles/spotlight.sass
+++ b/src/components/Spotlight/styles/spotlight.sass
@@ -40,3 +40,8 @@
 
 .blue
     background-color: $spotlight_blue
+
+@media (min-width: 768px) and (max-width: 1024px)
+
+    .spotlight
+        display: none
