--- a/src/styles/global/global.sass
+++ b/src/styles/global/global.sass
@@ -14,7 +14,7 @@
         overflow-x: hidden !important
 
         header
-            width: 90%
+            width: 100%
             display: flex
             margin: auto
 
@@ -165,3 +165,43 @@
             display: flex
             flex-direction: column
             align-items: center
+
+@media (min-width: 768px) and (max-width: 1024px)
+
+    .heading-container
+        width: 100%
+        height: auto
+        display: flex
+        justify-content: space-between
+        align-items: center
+
+    .section-heading
+        color: $black
+        font-feature-settings: 'clig' off, 'liga' off
+        font-family: Lato
+        font-size: $font28tab !important
+        font-style: normal
+        font-weight: 500
+        line-height: 100%
+
+    .view-btn
+        display: flex
+        align-items: center
+        background-color: transparent
+        cursor: pointer
+        border: none
+    .view
+        color: $primary_gray
+        font-feature-settings: 'clig' off, 'liga' off
+        font-family: Lato
+        font-size: $font16tab !important
+        font-style: normal
+        font-weight: 400
+        line-height: 166.667%
+        margin-right: $m8tab !important
+
+    .chevron-icon
+        font-size: $font16tab !important
+
+    .main-content
+        display: none !important
