--- a/src/components/TrendingList/styles/trending_list.sass
+++ b/src/components/TrendingList/styles/trending_list.sass
@@ -16,3 +16,16 @@
         .swiper-wrapper
             display: flex
             flex-direction: row
+
+@media (min-width: 768px) and (max-width: 1024px)
+
+    .trending-list
+
+        .trending-swiper
+            display: none
+
+        .trending-list-tablet
+            width: 100%
+            display: flex
+            flex-direction: column
+            margin-top: $m64tab
