--- a/src/components/ProductsList/styles/products_list.sass
+++ b/src/components/ProductsList/styles/products_list.sass
@@ -22,6 +22,7 @@
 @media (min-width: 768px) and (max-width: 1024px)
 
     .products-list
+        justify-content: space-between !important
         margin-top: $m64tab !important
 
         .heading-container
@@ -39,3 +40,4 @@
                 display: flex
                 flex-direction: row !important
                 align-items: center
+                margin-top: clamp(24px,6.25vw,96px)
